# prog_2.7.2

./: .gitignore  Book.cpp  Book.h  BookList.cpp  BookList.h  CMakeLists.txt  GenericList.cpp  GenericList.h  LICENSE  Operation.cpp  Operation.h  OperationList.cpp  OperationList.h  README.md  Reader.cpp  Reader.h  ReaderList.cpp  ReaderList.h  books.txt  main.cpp  readers.txt
